--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -1,22 +1,46 @@
 /* Kommentar im CSS-Block */
 /* All-Selektor */
-
-
-/* Elementselektoren */
-a {
-    display:block;
-    padding: 10px;
-    width: auto;
-    max-width: 10%;
-    border: 1px solid black;
+*{
+    font-family: Helvetica, "Comic Sans", sans-serif;
 }
 
+/* Elementselektoren */
+body {
+    margin: 0;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 15%;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+  }
+  
+  li a {
+    display: block;
+    color: #000;
+    padding: 12px 16px;
+    text-decoration: none;
+  }
+  
 
 /* Klassen-Selektoren */
 
 
-/* ID-Selektoren überschreibt alle vorherigen Selektoren*/
+/* ID-Selektoren*/
+#navigation{
+    border-right: 1px solid black;
+}
 
+#content{
+    margin-left:15%;
+    padding:1px 16px;
+    height:1000px;
+}
 
 
 
