--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -36,6 +36,10 @@ ul {
     border-right: 1px solid black;
 }
 
+#logo{
+  padding: 12px 0 12px 12px;
+}
+
 #content{
     margin-left:15%;
     padding:1px 16px;
