--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -13,6 +13,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    min-width: 160px;
     width: 15%;
     background-color: #f1f1f1;
     position: fixed;
@@ -40,9 +41,9 @@ ul {
 }
 
 #content{
-    margin-left:15%;
-    padding:1px 16px;
-    height:1000px;
+  margin-left:15%;
+  padding:1px 16px;
+  height:1000px;
 }
 
 #footer_text{    
