--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -18,18 +18,21 @@ ul {
     background-color: #f1f1f1;
     position: fixed;
     height: 100%;
-  }
+}
   
-  li a {
-    display: block;
-    color: #000;
-    padding: 12px 16px;
-    text-decoration: none;
-  }
+li a {
+  display: block;
+  color: #000;
+  padding: 12px 16px;
+  text-decoration: none;
+}
   
 
 /* Klassen-Selektoren */
-
+.hover_class:hover{
+  background-color: #093a80;
+  color: white;
+}
 
 /* ID-Selektoren*/
 #navigation{
