--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -49,8 +49,8 @@ li a {
   height:1000px;
 }
 
-#footer_text{    
-  color: #b72424;
+#footer_text{    /*Roter Color Code von Logo: #b72424 */
+  color: white;
 }
 
 #footer{
