--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -13,7 +13,8 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    min-width: 160px;
+    min-width: 200px;
+    max-width: 300px;
     width: 15%;
     background-color: #f1f1f1;
     position: fixed;
