added bac cursor

--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -2,6 +2,7 @@
 /* All-Selektor */
 *{
     font-family: Helvetica, "Comic Sans", sans-serif;
+    cursor: url(../../logo.cur),auto;
 }
 
 /* Elementselektoren */
