--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -11,6 +11,11 @@ body {
     line-height: 1.3rem;
 }
 
+h1{
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
