--- a/Gruppenaufgabe/Leon/assets/styles/leon.css
+++ b/Gruppenaufgabe/Leon/assets/styles/leon.css
@@ -125,6 +125,13 @@ a{
 .hover_class:hover{
   transform: scale(1.1);
   box-shadow: 0px 0px 9px white;
+  outline: none;
+}
+
+
+.hover_class:focus{
+  box-shadow: 0px 0px 9px white;
+  outline: none;
 }
 
 /* Alle Buttons im PDF-Viewer sollen Material Design blau sein und auf gleichem Level abgesetzt sein */
