--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -7,8 +7,8 @@
 /* Elementselektoren */
 body {
     margin: 0;
-    font-size: 1.2rem;
-    line-height: 1.3rem;
+    font-size: 1.2em;
+    line-height: 1.3em;
 }
 
 ul {
