--- a/Gruppenaufgabe/assets/styles/group_website.css
+++ b/Gruppenaufgabe/assets/styles/group_website.css
@@ -11,6 +11,7 @@ body {
     line-height: 1.3em;
 }
 
+/* Navigation */
 ul {
     list-style-type: none;
     margin: 0;
@@ -28,7 +29,8 @@ li a {
   color: #000;
   padding: 12px 16px;
   text-decoration: none;
-}  
+} 
+/* Navigation Ende */
 
 /* Klassen-Selektoren */
 .hover_class:hover{
